# Converter

./: CMakeLists.txt  README.md
include/: BitConverter.hpp  BitInput.hpp
include/converter/: BitConverter.hpp  BitInput.hpp  Constants.hpp
src/: BitConverter.cpp  main.cpp
tests/: test_BitConverter.cpp
